# corporate-compliance-env

./: .gitignore  BUG_TRACKER.md  Dockerfile  README.md  README_SANYA.md  README_VANSH.md  README_VEDIKA.md  SANYA_DAY3_REPORT.md  SANYA_HANDOFF_SUMMARY.md  TRAINING.md  VEDIKA_DAY3_HANDOFF.md  VEDIKA_DAY3_QA_REPORT.md  VEDIKA_SUMMARY.txt  day3_test_results.txt  inference.py  openenv.yaml  pyproject.toml  readme.md  requirements.txt
app/: __init__.py  baseline.py  client.py  dashboard.py  graders.py  models.py
app/server/: app.py  environment.py
data/: claims.json  generate_dataset.py  policy.md  validate_dataset.py
server/: app.py
tests/: test_api.py  test_client.py  test_graders.py  test_rewards.py  test_variance.py
training/: eval_checkpoint.py  grpo_train.py  prepare_data.py  publish_adapter.py  requirements-training.txt  sft_train.py
training/data/: sft_dataset.jsonl  trajectories.json
