[project]
name = "meta-openenv"
version = "0.1.0"
description = "A compliance environment for Meta's OpenEnv."
authors = [{ name = "Vansh Gupta", email = "vansh@meta.com" }]
license = { text = "MIT" }
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "openenv",
    "pytest",
    "httpx",
    "pydantic>=2.12.5",
    "openenv-core>=0.2.3",
    "requests>=2.33.1",
    "e>=1.4.5",
    "gradio>=6.11.0",
    "huggingface-hub>=1.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*"]
