[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corporate-compliance-env"
version = "1.0.0"
description = "RL environment for auditing employee expense claims against corporate policy"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Vansh Gupta", email = "vanshgupta1810@gmail.com"}
]
keywords = ["reinforcement-learning", "compliance", "openenv", "rl-environment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pytest",
    "openenv-core",
    "requests",
    "gradio",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://github.com/VanshGupta18/corporate-compliance-env"
Repository = "https://github.com/VanshGupta18/corporate-compliance-env.git"
Documentation = "https://huggingface.co/spaces/mcqueenmater/env-corporate"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
